--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=checkpoint3
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+springdoc.swagger-ui.path=/swagger
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
