--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ springdoc.swagger-ui.path=/swagger
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=galo
+
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
