--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=checkpoint3
 
+spring.jpa.defer-datasource-initialization=true
+
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 springdoc.swagger-ui.path=/swagger
+springdoc.api-docs.path=/v3/api-docs
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
